[fix/#35]: 리뷰사항 수정